Fixed align problems

--- a/public/css/full-width-pics.css
+++ b/public/css/full-width-pics.css
@@ -44,9 +44,6 @@ body {
     margin: 30px 0;
 }
 
-footer {
-    margin: 50px 0;
-}
 
 @media(max-width:768px) {
     section {
